{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 141,
  "lineage": "fe997334-2ef7-334e-5beb-59603ca68c28",
  "resources": [
    {
      "module": "module.load-balancer[0]",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.load-balancer[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "PublicIPForLB",
            "resource_group_name": "peeee",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer[1]",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/loadBalancers/p-alb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/loadBalancers/p-alb",
            "location": "uksouth",
            "name": "p-alb",
            "resource_group_name": "peeee",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.load-balancer.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer[1]",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/loadBalancers/p-alb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/loadBalancers/p-alb",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.load-balancer.azurerm_lb.alb",
            "module.load-balancer.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer[1]",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "alb-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/loadBalancers/p-alb/probes/Http-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/loadBalancers/p-alb",
            "name": "Http-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.load-balancer.azurerm_lb.alb",
            "module.load-balancer.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer[1]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "PublicIPForLB",
            "resource_group_name": "peeee",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg"
          ]
        }
      ]
    },
    {
      "module": "module.sec-group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/networkSecurityGroups/pee-nsg",
            "location": "uksouth",
            "name": "pee-nsg",
            "resource_group_name": "peeee",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.p-rg"
          ]
        }
      ]
    },
    {
      "module": "module.sec-group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/networkSecurityGroups/pee-nsg/securityRules/rule1",
            "name": "rule1",
            "network_security_group_name": "pee-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "peeee",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.sec-group.azurerm_network_security_group.pnsg"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/networkSecurityGroups/pee-nsg/securityRules/rule2",
            "name": "rule2",
            "network_security_group_name": "pee-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "peeee",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.sec-group.azurerm_network_security_group.pnsg"
          ]
        }
      ]
    },
    {
      "module": "module.sec-group",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pnsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/virtualNetworks/vn/subnets/sn",
            "network_security_group_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/networkSecurityGroups/pee-nsg",
            "subnet_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/virtualNetworks/vn/subnets/sn"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.sec-group.azurerm_network_security_group.pnsg",
            "module.vnet.azurerm_subnet.p-sn",
            "module.vnet.azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "module": "module.vm[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/networkInterfaces/nic-1",
            "internal_domain_name_suffix": "tnsvycvyrgzute32kaqkma1doe.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/publicIPAddresses/pip-1",
                "subnet_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/virtualNetworks/vn/subnets/sn"
              }
            ],
            "location": "uksouth",
            "name": "nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "peeee"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.vm.azurerm_public_ip.ppip",
            "module.vnet.azurerm_subnet.p-sn",
            "module.vnet.azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "module": "module.vm[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ppip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/publicIPAddresses/pip-1",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pip-1",
            "resource_group_name": "peeee",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/networkInterfaces/nic-2",
            "internal_domain_name_suffix": "tnsvycvyrgzute32kaqkma1doe.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip-2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/publicIPAddresses/pip-2",
                "subnet_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/virtualNetworks/vn/subnets/sn"
              }
            ],
            "location": "uksouth",
            "name": "nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "peeee"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.vm.azurerm_public_ip.ppip",
            "module.vnet.azurerm_subnet.p-sn",
            "module.vnet.azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "module": "module.vm[1]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ppip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/publicIPAddresses/pip-2",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pip-2",
            "resource_group_name": "peeee",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "p-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/virtualNetworks/vn/subnets/sn",
            "name": "sn",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "peeee",
            "virtual_network_name": "vn"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg",
            "module.vnet.azurerm_virtual_network.v-net"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "v-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0a5c659b-89b8-49b3-93bc-5020a6036374",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/peeee/providers/Microsoft.Network/virtualNetworks/vn",
            "location": "uksouth",
            "name": "vn",
            "resource_group_name": "peeee"
          },
          "dependencies": [
            "azurerm_resource_group.p-rg"
          ]
        }
      ]
    }
  ]
}